# autonomous-ai-soc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  feature_extractor.py  main.py  model.py  pyproject.toml  requirements.txt  s3_poller.py  trainer.py
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_core.py
