[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artupak-soc"
version = "2.0.0"
description = "LSTM Autoencoder tabanli otonom SOC motoru"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "scikit-learn>=1.3.1",
    "pandas>=2.1.1",
    "numpy>=1.26.0",
    "joblib>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "ruff",
    "black",
    "mypy",
    "pre-commit",
]

[project.scripts]
artupak = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
